--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,11 @@
     "modules": true,
     "jsx": true
   },
+  "globals": {
+    "$": false,
+    "_": false,
+    "Parse": false
+  },
   "rules": {
     "eol-last": 0,
     "new-cap": 0,
