--- a/package.json
+++ b/package.json
@@ -4,15 +4,9 @@
   "description": "",
   "main": "",
   "scripts": {
-    "test": "./node_modules/karma/bin/karma start",
-    "build": "rm -rf lib && mkdir lib && babel --loose --stage 0 --out-dir lib src",
-    "lint": "eslint src",
-    "preversion": "npm run lint && npm run test && npm run build-examples",
-    "postversion": "git push && git push --tags",
-    "prepublish": "npm run build",
-    "build-examples": "npm run clean && webpack --config examples/webpack.config.build.js --progress",
-    "start": "npm run clean && webpack-dev-server --config examples/webpack.config.js --progress --hot --inline",
-    "clean": "rm -f examples/bundle.js examples/bundle.js.map"
+    "build": "npm run clean && webpack --config webpack.config.build.js --progress",
+    "start": "npm run clean && webpack-dev-server --config webpack.config.js --progress --hot --inline",
+    "clean": "rm -f bundle.js bundle.js.map"
   },
   "repository": {
     "type": "git",
@@ -27,7 +21,6 @@
   "homepage": "https://github.com/buildo/web-lib-seed",
   "dependencies": {
     "axios": "^0.5.4",
-    "imdb-api": "^1.3.3",
     "react-select": "^0.6.3"
   },
   "devDependencies": {
